--- a/register.html
+++ b/register.html
@@ -25,7 +25,7 @@
       {
         $.ajax(
           {
-            url:"testpost.py",
+            url:"test_post/nn",
             type:"POST",
             Username:$Username,
             Password:$Password,
