--- a/register.html
+++ b/register.html
@@ -32,7 +32,7 @@
       <form role="form" class="form-horizontal" method="post">
         <div class="form-group">
           <label class="control-label">Nmae</label>
-          <input name="Ssername" type="text" class="form-control"required autofocus>
+          <input name="Username" type="text" class="form-control"required autofocus>
         </div>
 
         <div class="form-group">
