--- a/register.html
+++ b/register.html
@@ -31,7 +31,7 @@
       <h1>Register</h1>
       <form role="form" class="form-horizontal" method="post">
         <div class="form-group">
-          <label class="control-label">Nmae</label>
+          <label class="control-label">Name</label>
           <input name="Username" type="text" class="form-control"required autofocus>
         </div>
 
