--- a/userinterface.html
+++ b/userinterface.html
@@ -31,13 +31,10 @@
               <button type="button" class="btn dropdown-toggle" id="UserDropMenu" data-toggle="dropdown">Nmae<span class="glyphicon glyphicon-user caret"></span></button>
               <ul class="dropdown-menu" role="menu" aria-labelledby="UserDropMenu">
                 <li role="presentation">
-                <a role="menuitem"  tabindex="-1" href="#">Nmae:Water</a>
+                <a role="menuitem"  tabindex="-1" href="#">Nmae:{{Username}}</a>
                 </li>
                 <li role="presentation">
-                  <a role="menuitem"  tabindex="-1" href="#">Date of Brith:Water</a>
-                </li>
-                <li role="presentation">
-                  <a role="menuitem"  tabindex="-1" href="#">E-mail:Water</a>
+                  <a role="menuitem"  tabindex="-1" href="#">E-mail:{{Email}}</a>
                 </li>
               </ul>
             </div>
