--- a/login.html
+++ b/login.html
@@ -57,20 +57,25 @@
 
 </script>
 <body>
-<h1>Login in</h1>
-<table>
-  <tr>
-    <td>UserNmae:</td>
-    <td><input type="text" id="UserName"  placeholder="Write your name"/></td>
-  </tr>
-  <tr>
-    <td>Password</td>
-    <td><input type="password" id="Password"/><button id="LookPassword"></button></td>
-  </tr>
-</table>
-<button id="login_button">Login in<p id="ErrorMessage"></p></button>
-<div id="myDiv">
-
+<div class="bgimage container col-conter">
+  <h1 style="text-align: center">Login in</h1>
+  <div class="col-xs-4 col-sm-4 col-md-4 col-conter">
+  <form role="form" class="form-horizontal center-block" method="post">
+    <div class="form-group">
+        <label>Name</label>
+        <input type="text" name="Username" class="form-control" required autofocus>
+    </div>
+    <div class="form-group">
+        <label>Password</label>
+        <input type="password" name="Password" class="form-control" required>
+    </div>
+    <div class="form-group">
+      <label>
+        <input type="submit" class="form-control btn btn-info" value="Login in">
+      </label>
+    </div>
+  </form>
+</div>
 </div>
 </body>
 </html>
